[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "cg-vrp"
version = "0.1.0"
description = "Column generation for the Vechile-Routing-Problem."
authors = [{ name = "littleqjy", email = "littleqjy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "networkx",
    "pulp"
]

[project.urls]
Homepage = "https://github.com/littleQiu22/cg-vrp"

[tool.scikit-build]
wheel.packages = ["src/cgvrp"]

[tool.scikit-build.cmake]
minimum-version = "3.18"

[tool.scikit-build.opts]
cmake.args = ["-DCMAKE_CXX_STANDARD=17"]

[tool.setuptools.packages.find]
where = ["src"]